# PyCALQ

./: .gitignore  COMPREHENSIVE_CLEANUP_SUMMARY.md  FINAL_CLEANUP_STATUS.md  FINAL_SIMPLIFICATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  Meeting_Notes.md  README.md  README_REFACTORING.md  REDUNDANCY_CLEANUP_SUMMARY.md  REFACTORING_SUMMARY.md  pycalq.py  pycalq_cli.py  pyproject.toml  requirements-test.txt  requirements.txt
.claude/: settings.json
fvspectrum/: compare_sigmond_levels.py  sigmond_average_corrs.py  sigmond_project_handler.py  sigmond_rotate_corrs.py  sigmond_spectrum_fits.py  sigmond_util.py  sigmond_view_corrs.py
fvspectrum/analysis/: correlator_processor.py
fvspectrum/constants/: __init__.py  analysis_constants.py  physics_constants.py  plotting_constants.py
fvspectrum/core/: base_task.py  data_structures.py
fvspectrum/fitting/: spectrum_fitter.py
fvspectrum/legacy_backup/: sigmond_rotate_corrs.py  sigmond_view_corrs.py
fvspectrum/plotting/: spectrum_plotter.py
fvspectrum/sigmond_utils/: ensembles.xml  get_weights.ipynb
fvspectrum/spectrum_plotting_settings/: settings.py
fvspectrum/tasks/: average_correlators.py  compare_spectrums.py  fit_spectrum.py  preview_correlators.py  rotate_correlators.py
fvspectrum/utils/: __init__.py  data_utils.py  file_utils.py  fitting_utils.py  plot_utils.py  project_utils.py
general/: Handler_Prototype.py  NN.txt  Plotter.py  config_handler.py  data_reader.py  particles.py  plotting_handler.py  project_directory.py  task_manager.py
test_configs/: c103-nn_fits.yml  c103-nn_tasks.yml  c103_tasks.yml
tests/: conftest.py  run_tests.py
tests/integration/: test_task_integration.py
tests/unit/: legacy_test_data_structures.py
tests/unit/core/: test_base_task.py  test_data_structures.py
